<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.cienciacomputacao.osqr.MainActivity">

    <com.cienciacomputacao.osqr.custom.TextView
        android:textSize="19sp"
        android:id="@+id/tvApName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <com.cienciacomputacao.osqr.custom.TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_message_subtitle" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/viewGenerateCode"
            android:layout_width="@dimen/width_button_1"
            android:layout_height="@dimen/height_button_1"
            android:layout_margin="2dp"
            android:background="@drawable/main_button_01_background"
            android:clickable="true"
            android:focusable="true">

            <com.cienciacomputacao.osqr.custom.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_generate_code"
                android:text="@string/generate_code"
                android:textColor="#FFF" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/viewReadCode"
            android:layout_width="@dimen/width_button_1"
            android:layout_height="@dimen/height_button_1"
            android:layout_margin="2dp"
            android:background="@drawable/main_button_02_background"
            android:clickable="true"
            android:focusable="true">

            <com.cienciacomputacao.osqr.custom.TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_read_code"
                android:text="@string/read_code"
                android:textColor="#FFF" />

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/viewRegisters"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="@dimen/width_button_2"
        android:layout_height="@dimen/height_button_2"
        android:layout_margin="2dp"
        android:background="@drawable/main_button_03_background">

        <com.cienciacomputacao.osqr.custom.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:drawableTop="@drawable/ic_list"
            android:text="@string/records"
            android:textColor="#FFF" />

    </FrameLayout>

</LinearLayout>
