<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_marginBottom="75dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="315dp"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#FEFEFE"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <com.cienciacomputacao.osqr.custom.TextView
                        android:id="@+id/tvTitleClient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_check_circle_gray"
                        android:padding="10dp"
                        android:text="@string/client"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <com.cienciacomputacao.osqr.custom.TextView
                        android:id="@+id/tvClientName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_close"
                        android:gravity="center"
                        android:paddingEnd="0dp"
                        android:paddingStart="10dp"
                        android:text="@string/name"
                        android:textColor="#BBB" />

                    <com.cienciacomputacao.osqr.custom.TextView
                        android:id="@+id/tvClientCpf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawablePadding="10dp"
                        android:paddingEnd="0dp"
                        android:paddingStart="10dp"
                        android:text="@string/cpf"
                        android:textColor="#BBB"
                        android:visibility="gone" />

                    <com.cienciacomputacao.osqr.custom.TextView
                        android:id="@+id/tvClientTelephone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawablePadding="10dp"
                        android:paddingEnd="0dp"
                        android:paddingStart="10dp"
                        android:text="@string/telephone"
                        android:textColor="#BBB"
                        android:visibility="gone" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginBottom="10dp"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="#FEFEFE"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="10dp">

                    <com.cienciacomputacao.osqr.custom.TextView
                        android:id="@+id/tvTitleService"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/ic_check_circle_gray"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="Serviço(s)"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />

                    <com.cienciacomputacao.osqr.custom.TextView
                        android:id="@+id/tvServiceCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawablePadding="10dp"
                        android:drawableStart="@drawable/ic_close"
                        android:paddingEnd="0dp"
                        android:paddingStart="10dp"
                        android:text="@string/message_min_one_service"
                        android:textColor="#BBB" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btFinal"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:background="@drawable/finalize_button_enabled"
        android:text="Salvar e Gerar Código"
        android:textColor="#FFF"
        android:textSize="14sp" />

</RelativeLayout>