<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_profile_image"
                app:riv_border_width="0dip"
                app:riv_corner_radius="30dip"
                app:riv_mutate_background="false"
                app:riv_oval="true"
                app:riv_tile_mode="clamp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.cienciacomputacao.osqr.custom.TextInputEditText
                    android:id="@+id/edtNome"
                    android:layout_width="match_parent"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.cienciacomputacao.osqr.custom.TextInputEditText
                    android:id="@+id/edtCpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:hint="@string/cpf"
                    android:inputType="number"
                    android:maxLength="11" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.cienciacomputacao.osqr.custom.TextInputEditText
                    android:id="@+id/edtTelephone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/telephone"
                    android:textSize="15sp"
                    android:inputType="number"
                    android:maxLength="11" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/fabNext"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="15dp"
        android:src="@drawable/ic_right"
        app:backgroundTint="#EEE" />

</FrameLayout>