<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loading"
    android:layout_width="@dimen/alert_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ImageView
        android:id="@+id/custom_image"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/error_frame"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/error_circle" />

        <ImageView
            android:id="@+id/error_x"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/error_center" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/success_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#FFF"
        android:orientation="vertical"
        android:visibility="gone">

        <FrameLayout
            android:layout_width="53dp"
            android:layout_height="53dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/success_bow" />

            <View
                android:id="@+id/mask_right"
                android:layout_width="35dp"
                android:layout_height="80dp"
                android:layout_gravity="end"
                android:layout_marginTop="-13dp"
                android:background="@android:color/white" />

            <View
                android:id="@+id/mask_left"
                android:layout_width="21dp"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:layout_marginStart="-3dp"
                android:background="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/success_circle" />

            <com.cienciacomputacao.osqr.custom.SuccessTickView
                android:id="@+id/success_tick"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/containerIvQRCode"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_qrcode"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerInside"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btSave"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/gray_button_background"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_download" />

                <ImageButton
                    android:id="@+id/btPrint"
                    android:layout_width="46dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/gray_button_background"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_print" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/warning_frame"
        android:layout_width="53dp"
        android:layout_height="53dp"
        android:layout_marginTop="5dp"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/warning_circle" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/warning_sigh" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/progress_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="9dp"
        android:orientation="vertical"
        android:visibility="gone">

        <com.pnikosis.materialishprogress.ProgressWheel
            android:id="@+id/progressWheel"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            wheel:progressIndeterminate="true" />

    </FrameLayout>

    <com.cienciacomputacao.osqr.custom.TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:singleLine="true"
        android:text="@string/dialog_default_title"
        android:textColor="#575757"
        android:textSize="17sp" />

    <com.cienciacomputacao.osqr.custom.TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="#797979"
        android:textSize="14sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            style="@style/dialog_button"
            android:layout_marginEnd="10dp"
            android:background="@drawable/gray_button_background"
            android:text="@string/dialog_cancel"
            android:visibility="gone" />

        <Button
            android:id="@+id/confirm_button"
            style="@style/dialog_button"
            android:background="@drawable/blue_button_background"
            android:text="@string/dialog_ok" />

    </LinearLayout>
</LinearLayout>